alteração no header.html e adição do robots.txt

--- a/_includes/themes/estorage/header.html
+++ b/_includes/themes/estorage/header.html
@@ -36,7 +36,7 @@
 </head>
     
 <body>
-	<header class="navbar navbar-inverse navbar-fixed-top navbar-main" role="navigation">
+	<header class="navbar navbar-inverse navbar-fixed-top navbar-main hidden-xs" role="navigation">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-principal">
               <span class="sr-only">Toggle navigation</span>
