--- a/_includes/themes/estorage/header.html
+++ b/_includes/themes/estorage/header.html
@@ -44,8 +44,22 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand hidden-lg hidden-md hidden-sm" href="/"><img src="{{ ASSET_PATH }}/img/logo_E.png"></a>
+            
+            <button type="button" class="navbar-toggle navbar-search" data-toggle="collapse" data-target="#navbar-collapse-search">
+              <img src="{{ ASSET_PATH }}/img/search-icon.png" height="22" width="22">
+            </button>
+            
+            <a class="navbar-brand hidden-lg hidden-md hidden-sm" href="/"><img src="{{ ASSET_PATH }}/img/logo-E-mobile.png" width="28" height="36"></a>
         </div>
+        
+        <div class="collapse navbar-collapse" id="navbar-collapse-search">
+            <form class="navbar-form navbar-left hidden-sm hidden-md hidden-lg" role="search">
+                <div class="form-group">
+                    <input type="text" class="form-control input-busca" placeholder="Busca">
+                </div>
+            </form>
+        </div>
+        
         <div class="collapse navbar-collapse" id="navbar-collapse-principal">
 		    <ul class="nav navbar-nav hidden-sm hidden-md hidden-lg">
 				{% include themes/estorage/navigation.html %}
@@ -86,7 +100,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/"><img src="{{ ASSET_PATH }}/img/logo_E.png"></a>
+                <a class="navbar-brand" href="/"><img src="{{ ASSET_PATH }}/img/logo-E.png"></a>
             </div>
             
                 <form class="navbar-form navbar-left" role="search">
