--- a/_includes/themes/estorage/header.html
+++ b/_includes/themes/estorage/header.html
@@ -14,9 +14,7 @@
 	<script src="{{ ASSET_PATH }}/js/bootstrap.min.js"></script>
     
     <link href="{{ ASSET_PATH }}/css/idangerous.swiper.css" rel="stylesheet">
-    <script src="{{ ASSET_PATH }}/js/idangerous.swiper-2.3.min.js"></script>
-    <link rel="stylesheet" href="{{ ASSET_PATH }}/css/idangerous.swiper.3dflow.css">
-    <script src="{{ ASSET_PATH }}/js/idangerous.swiper.3dflow-2.0.js"></script>
+    <script src="{{ ASSET_PATH }}/js/idangerous.swiper.min.js"></script>
 	
 	<!-- HTML5 Shim and Respond.js IE8 support oh HTML5 elements and media queries -->
 	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -25,14 +23,6 @@
 		<script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->
     
-    <script>
-        // Added this just so I didn't have to wait 5 seconds to see if the transition worked. //
-        $(document).ready(function() {
-			$('#mainCarousel').carousel({
-				interval: 2000
-			})
-        });
-    </script>
 </head>
     
 <body>
