--- a/assets/themes/estorage/css/style.css
+++ b/assets/themes/estorage/css/style.css
@@ -270,7 +270,7 @@ h6,
 
 @media (max-width: 767px) {
     .input-busca {
-        width: 100% !important;
+        width: 104% !important;
     }
 }
 
@@ -486,6 +486,27 @@ footer p {
 .swiper-container .swiper-slide .swiper-slide-content {
     color: #fff;
     margin: auto;
+}
+
+.swiper-container .arrow-left {
+  background: url(../img/arrows.png) no-repeat left top;
+  position: absolute;
+  left: 10px;
+  top: 50%;
+  margin-top: -15px;
+  width: 17px;
+  height: 30px;
+  z-index: 10;
+}
+.swiper-container .arrow-right {
+  background: url(../img/arrows.png) no-repeat left bottom;
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  margin-top: -15px;
+  width: 17px;
+  height: 30px;
+  z-index: 10;
 }
 
 .swiper-slide .caixaMagica {
