--- a/_includes/themes/estorage/footer.html
+++ b/_includes/themes/estorage/footer.html
@@ -18,6 +18,28 @@
                 mySwiper.swipeNext()
             })
         </script>
+        <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD5WAJFha10mZjJ-zkWZ4jf-XvW81gVAm8&sensor=false"></script>
+        <script type="text/javascript">
+          function initialize() {
+            var esto = new google.maps.LatLng(-29.7943154,-51.1492928)
+            var mapOptions = {
+              center: esto,
+              zoom: 15
+            };
+            
+            var map = new google.maps.Map(document.getElementById("map-canvas"),
+                mapOptions);
+            
+            var marker = new google.maps.Marker({
+                position: esto,
+                map: map,
+                title:"Hello World!"
+            });
+            
+          }
+          google.maps.event.addDomListener(window, 'load', initialize);
+        </script>
+        
         <div class="container">
             <p class="text-center"><a href="/">E-Storage</a> – 0800-643-4664<br />Avenida Unisinos, 950 - Centro Empresarial Padre Rick SJ, sala 306, 93022-000 - São Leopoldo, RS</p>
         </div>
