--- a/_includes/themes/estorage/navigation.html
+++ b/_includes/themes/estorage/navigation.html
@@ -5,7 +5,7 @@
     {% endif %}
 
 {% if link.text == 'Soluções' %}
-        <li class="dropdown {{ current }}">
+        <!-- <li class="dropdown {{ current }}">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Soluções<b class="caret"></b></a>
                 <ul class="dropdown-menu">
                     <li><a href="/solucoes/judiciario.html">Judiciário</a></li>
@@ -14,8 +14,16 @@
                     <li><a href="/solucoes/e-commerce.htlm">E-commerce</a></li>
                     <li><a href="/solucoes/GED.html">GED</a></li>
                 </ul>
+        </li> -->
+{% elsif link.text == 'Produtos' %}
+        <li class="dropdown {{ current }}">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Produtos<b class="caret"></b></a>
+                <ul class="dropdown-menu">
+                    <li><a href="/produtos/google-search-appliance.html">Google Search Appliance</a></li>
+                    <li><a href="/produtos/google-site-search.html">Google Site Search</a></li>
+                </ul>
         </li>
-{% elsif link.text == 'Contato' %}    
+{% elsif link.text == 'Contato' %}
         <li class="{{ current }} hidden-sm">
             <a href="{{ link.url }}">{{ link.text }}</a>
         </li>
