--- a/_includes/themes/estorage/navigation.html
+++ b/_includes/themes/estorage/navigation.html
@@ -5,16 +5,17 @@
     {% endif %}
 
 {% if link.text == 'Soluções' %}
-        <!-- <li class="dropdown {{ current }}">
+        <li class="dropdown {{ current }}">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Soluções<b class="caret"></b></a>
                 <ul class="dropdown-menu">
+                    <!--<li><a href="/solucoes/suporte.html">Judiciário</a></li>-->
                     <li><a href="/solucoes/judiciario.html">Judiciário</a></li>
                     <li><a href="/solucoes/intranet.html">Intranet</a></li>
-                    <li><a href="/solucoes/internet.html">Internet</a></li>
+                    <!--<li><a href="/solucoes/internet.html">Internet</a></li>
                     <li><a href="/solucoes/e-commerce.htlm">E-commerce</a></li>
-                    <li><a href="/solucoes/GED.html">GED</a></li>
+                    <li><a href="/solucoes/GED.html">GED</a></li>-->
                 </ul>
-        </li> -->
+        </li>
 {% elsif link.text == 'Produtos' %}
         <li class="dropdown {{ current }}">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Produtos<b class="caret"></b></a>
